--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
 spring.datasource.username=EventEaseDBA
 spring.datasource.password=test123
 spring.threads.virtual.enabled=true
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
