Implementing the logic to create events

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
