--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@172.17.0.1:1521/XEPDB1
-spring.datasource.username=EventEaseDBA
-spring.datasource.password=test123
+#spring.datasource.url=jdbc:oracle:thin:@172.17.0.1:1521/XEPDB1
+#spring.datasource.username=EventEaseDBA
+#spring.datasource.password=test123
 spring.threads.virtual.enabled=true
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
