--- a/pom.xml
+++ b/pom.xml
@@ -104,8 +104,21 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
-
 				</executions>
+				<configuration>
+					<rules>
+						<rule>
+							<element>BUNDLE</element>
+							<limits>
+								<limit>
+									<counter>LINE</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>0.80</minimum> <!-- 80% line coverage required -->
+								</limit>
+							</limits>
+						</rule>
+					</rules>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
