--- a/pom.xml
+++ b/pom.xml
@@ -104,21 +104,28 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
+
+					<execution>
+						<id>jacoco-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.80</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
 				</executions>
-				<configuration>
-					<rules>
-						<rule>
-							<element>BUNDLE</element>
-							<limits>
-								<limit>
-									<counter>LINE</counter>
-									<value>COVEREDRATIO</value>
-									<minimum>0.80</minimum> <!-- 80% line coverage required -->
-								</limit>
-							</limits>
-						</rule>
-					</rules>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
